New tools dedicated to WPF and Silverlight effects : - Perspective.PixelShader.Compiler : a pixel shader compiler - This is a C++ project. - Perspective.PixelShader.BuildTask : a custom MSBuild task. So now there is no more need to use the Shader Effects BuildTask and Templates of the WPF Futures project (which has not been updated for .NET 4.0).

--- a/FxGenerator/FxGeneratorCmd/FxDemo.xaml
+++ b/FxGenerator/FxGeneratorCmd/FxDemo.xaml
@@ -6,6 +6,22 @@
     EffectNamespace="FxDemo.Effects"    
     >
     <pfx:EffectBuilder
+        EffectName="InvertEffect">
+        <pfx:Inverter FilterName="Inverter"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="WaveEffect"
+        DefaultSampling="False">
+        <pfx:WaveWarper FilterName="WaveWarper"/>
+        <pfx:Saturator FilterName="Saturation"/>
+        <pfx:Contraster FilterName="Contrast"/>
+        <pfx:Brighter FilterName="Brightness"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="LithEffect">
+        <pfx:ThresholdFilter />
+    </pfx:EffectBuilder>    
+    <pfx:EffectBuilder
         EffectName="DisplaySettingEffect">
         <pfx:Contraster FilterName="Contrast"/>
         <pfx:Brighter FilterName="Brightness"/>
