- 64 bits compatibility (effect generation and compilation now works on Windows 7 64 bits) - Binaries now contain version information - Source code now uses the new .NET 4 API for MSBuild (Microsoft.Build.Evaluation.ProjectCollection class instead of the deprecated Microsoft.Build.BuildEngine.Engine class) - A .proj file is now systematically generated for WPF and for Silverlight - Convolution3X3Filter now compiles with the latest DirectX 9 versions (X3025 error fixed) - FxDemo.xaml now uses all the Perspective FX filters

--- a/FxGenerator/FxGeneratorCmd/FxDemo.xaml
+++ b/FxGenerator/FxGeneratorCmd/FxDemo.xaml
@@ -6,25 +6,50 @@
     EffectNamespace="FxDemo.Effects"    
     >
     <pfx:EffectBuilder
-        EffectName="InvertEffect">
+        EffectName="DisplaySettingEffect">
+        <pfx:Contraster FilterName="Contrast"/>
+        <pfx:Brighter FilterName="Brightness"/>
+        <pfx:Saturator FilterName="Saturation"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="GrayScalerEffect">
+        <pfx:GrayScaler FilterName="GrayScaler"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="ClipperEffect">
+        <pfx:Clipper FilterName="Clipper"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="ColorTonerEffect">
+        <pfx:ColorToner FilterName="ColorToner"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="InverterEffect">
         <pfx:Inverter FilterName="Inverter"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="MixerEffect">
+        <pfx:Mixer FilterName="Mixer"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="SubtractorEffect">
+        <pfx:Subtractor FilterName="Subtractor"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="SolarizerEffect">
+        <pfx:Solarizer FilterName="Solarizer"/>
+    </pfx:EffectBuilder>
+    <pfx:EffectBuilder
+        EffectName="LithEffect">
+        <pfx:ThresholdFilter />
     </pfx:EffectBuilder>
     <pfx:EffectBuilder
         EffectName="WaveEffect"
         DefaultSampling="False">
         <pfx:WaveWarper FilterName="WaveWarper"/>
-        <pfx:Saturator FilterName="Saturation"/>
-        <pfx:Contraster FilterName="Contrast"/>
-        <pfx:Brighter FilterName="Brightness"/>
     </pfx:EffectBuilder>
     <pfx:EffectBuilder
-        EffectName="LithEffect">
-        <pfx:ThresholdFilter />
-    </pfx:EffectBuilder>    
-    <pfx:EffectBuilder
-        EffectName="DisplaySettingEffect">
-        <pfx:Contraster FilterName="Contrast"/>
-        <pfx:Brighter FilterName="Brightness"/>
-        <pfx:Saturator FilterName="Saturation"/>
-    </pfx:EffectBuilder>    
+        EffectName="ConvolutionEffect">
+        <pfx:Convolution3X3Filter FilterName="Convolution"/>
+    </pfx:EffectBuilder>
 </pfx:EffectBuilderCollection>
